[package]
name = "breakout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.2"
bevy-inspector-egui = "0.19.0"
bevy_asset_loader = "0.17.0"
bevy_common_assets = { version = "0.7.0", features = ["yaml"] }
serde = { version = "1.0.188", features = ["derive"] }
